# traffic-light-system

./: README.md
ArduinoUno/1.0.1/: RFID.h  rfid_buzzer.ino
ArduinoUno/V1/: RFID.cpp  RFID.h  rfid_buzzer.ino
CreateDeviceIdentity/1.0.0/ReadDeviceToCloudMessages/: Program.cs  packages.config
CreateDeviceIdentity/1.0.0/SendCloudToDevice/: Program.cs
CreateDeviceIdentity/1.0.0/SimulatedDevice/: packages.config
CreateDeviceIdentity/1.0.1/ReadDeviceToCloudMessages/: Program.cs
CreateDeviceIdentity/1.0.3/: CreateDeviceIdentity.sln
Dynamic Algorithm/V1/: effective_green_time.m  flow_ratio.m  remaining_effective_green_time.m
Dynamic Algorithm/V2/: Main.m
Dynamic Algorithm/V3/: Dynamic.m  current_traffic_volume.m  phase_green_time.m  remaining_effective_green_time.m  remaining_green_time.m  remaining_traffic.m
DynamicAlgorithm/1.0.0/: Dynamic.m  Main.m
DynamicAlgorithm/1.0.1/: test.m
DynamicAlgorithm/1.0.2/: Main.m
DynamicAlgorithm/V2/: compare.m
IntelEdison/1.0.1/: .cproject
IntelEdison/1.0.3/: Application.c  MAX6958.c  MAX6958.c~  MCP23017.c~  MCP23017.h  Serial.c~  Utility.c~  Utility.h
IntelEdison/1.0.4/: Application.c  Application.h  Application.h~  CMakeLists.txt  MAX6958.h  Main.c  Serial.c  Utility.c
IntelEdison/V2/: .project  Innovate_Edison.launch
IntelEdison/V3/: Innovate_Edison.launch
IntelEdison/V3/src/: Main.c  (+3 more)
IntelEdison/V4/: MCP23017.c
MonitoringSoftware/V10/: InnovateTraffic_Virtual.sln
MonitoringSoftware/V2/: InnovateTraffic.sln
MonitoringSoftware/V3/: InnovateTraffic.sln
MonitoringSoftware/V8/: InnovateTraffic.sln
(+75 files in other folders)
